[project]
name = "random-walker-cic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
